feat: arrumado DTOS de responses nos cases de get